*Empty MediaWiki Message*

--- a/რუსული_მუზეუმი_(სანქტ-პეტერბურგი).mw
+++ b/რუსული_მუზეუმი_(სანქტ-პეტერბურგი).mw
@@ -1,28 +1,28 @@
 [[სურათი:Russian Museum.jpg|thumb|300px|მიხაილოვსკის სასახლე]]
-'''სახელმწიფო რუსული მუზეუმი''' (რუს.:Государственный Русский музей), ყოფილი '''მისი იმპერიული უდიდებულესობა ალექსანდრე III-ის რუსული მუზეუმი''' რუსული სახვითი ხელოვნების ნიმუშების უდიდესი საცავია [[სანქტო-პეტერბურგი|სანქტ-პეტერბურგში]].
+'''სახელმწიფო რუსული მუზეუმი''' (რუს.:Государственный Русский музей), ყოფილი '''მისი იმპერიული უდიდებულესობა ალექსანდრე III-ის რუსული მუზეუმი''' რუსული სახვითი ხელოვნების ნიმუშების უდიდესი საცავია [[სანქტ-პეტერბურგი|სანქტ-პეტერბურგში]].
 
-მუზეუმი დაარსდა [[1895]] წლის [[13 აპრილი|13 აპრილს]] [[ნიკოლოზ II]]-ის ბრძანებით მამის, [[ალექსანდრე III]]-ის ხსოვნის უკვდავსაყოფად. მისი თავდაპირველი კოლექცია შედგებოდა [[ერმიტაჟი (სანქტ-პეტერბურგი)|ერმიტაჟის მუზეუმიდან]], ალექსანდრეს სასახლიდან და ხელოვნების იმპერიული აკადემიიდან წამოღებული ნიმუშებისგან. [[1917]] წლის [[ოქტომბრის რევოლუცია|რუსეთის რევოლუციის]] შემდეგ მრავალი კერძო კოლექცია ნაციონალიზებულ იქნა და რუსულ მუზეუმში გადმოინაცვლა. ამ კოლექციის ნაწილი იყო [[მალევიჩი, კაზიმირ|კაზიმირ მალევიჩის]] ”შავი კვადრატის” პირველი და ყველაზე ფასდაუდებელი ვერსია.
+მუზეუმი დაარსდა [[1895]] წლის [[13 აპრილი|13 აპრილს]] [[ნიკოლოზ II]]-ის ბრძანებით მამის, [[ალექსანდრე III]]-ის ხსოვნის უკვდავსაყოფად. მისი თავდაპირველი კოლექცია შედგებოდა [[ერმიტაჟი (სანქტ-პეტერბურგი)|ერმიტაჟის მუზეუმიდან]], ალექსანდრეს სასახლიდან და ხელოვნების იმპერიული აკადემიიდან წამოღებული ნიმუშებისგან. [[1917 წლის ოქტომბრის რევოლუცია|რუსეთის რევოლუციის]] შემდეგ მრავალი კერძო კოლექცია ნაციონალიზებულ იქნა და რუსულ მუზეუმში გადმოინაცვლა. ამ კოლექციის ნაწილი იყო [[მალევიჩი, კაზიმირ|კაზიმირ მალევიჩის]] ”შავი კვადრატის” პირველი და ყველაზე ფასდაუდებელი ვერსია.
 
-მუზეუმის მთავარი შენობა მახაილოვსკის სასახლეა -- დიდი თავადი მიხაილ პავლოვიჩის ბრწყინვალი ნეოკლასიკური რეზიდენცია, აგებული 1819-25 წლებში [[როსი, კარლო|კარლო როსის]] პროექტით სანქტ-პეტერბურგის ხელოვნების მოედანზე. სასახლის ზოგიერთ დერეფანში შემორჩენილია ყოფილი იმპერიული რეზიდენციის თავდაპირველი პომპეზური ინტერიერი. მუზეუმის სხვა შენობათა შორისაა [[პეტრე I]]-ის ზაფხულის სახლი (1710-14), გრაფი ორლოვის მარმარილოს სასახლე (1768-85), იმპერატორი პავლეს წმ. მიხეილის ციხე-კოშკი (1797-1801), და რასტრელის პროექტის სტროგანოვის სასახლე ნევსკი პროსპექტზე (1752-54).
+მუზეუმის მთავარი შენობა ''მახაილოვსკის სასახლეა'' -- დიდი თავადი მიხაილ პავლოვიჩის ბრწყინვალი [[ნეოკლასიციზმი|ნეოკლასიკური]] რეზიდენცია, აგებული 1819-25 წლებში [[როსი, კარლო|კარლო როსის]] პროექტით სანქტ-პეტერბურგის ხელოვნების მოედანზე. სასახლის ზოგიერთ დერეფანში შემორჩენილია ყოფილი იმპერიული რეზიდენციის თავდაპირველი პომპეზური ინტერიერი. მუზეუმის სხვა შენობათა შორისაა [[პეტრე I]]-ის ზაფხულის სახლი (1710-14), გრაფი ორლოვის მარმარილოს სასახლე (1768-85), იმპერატორი პავლეს წმ. მიხეილის ციხე-კოშკი (1797-1801), და რასტრელის პროექტის სტროგანოვის სასახლე ნევსკი პროსპექტზე (1752-54).
 
 ==კოლექცია==
-რუსული მუზეუმის კოლექციაში რუსული ხელოვნების ერთ-ერთი ყველაზე მნიშვნელოვანი ნიმუშებია მსოფლიოში. აქ მოთავსებულია სკულპტურების, ხელოვნების ობიექტების, გრაფიკული და ფერწერული ტილოების კოლექციები, მათ შორის სახელგანთქმული პორტრეტთა გალერეა.
+რუსული მუზეუმის კოლექციაში რუსული ხელოვნების შესაძლოა ყველაზე მნიშვნელოვანი ნიმუშებია მსოფლიოში. აქ მოთავსებულია სკულპტურების, ხელოვნების ობიექტების, გრაფიკული და ფერწერული ტილოების კოლექციები, მათ შორის სახელგანთქმული პორტრეტთა გალერეა.
 
 ===XVIII-XIX საუკუნეები===
-*”პომპეის ბოლო დღე”, კარლ ბრულოვი
-*”მურთაზ ყული ხანის პორტრეტი”, ვლადიმირ ბოროვიკოვსკი
+*”პომპეის ბოლო დღე”, [[ბრულოვი, კარლ|კარლ ბრულოვი]]
+*”მურთაზ ყული ხანის პორტრეტი”, [[ბოროვიკოვსკი, ვლადიმი|ვლადიმირ ბოროვიკოვსკი]]
 *”გააფრთებული ქვეწარმავალი”, ფიდელიო ბრუნი
-*”მეცხრე ტალღა”, ივან აივაზოვსკი
+*”მეცხრე ტალღა”, [[აივაზოვსკი, ივან|ივან აივაზოვსკი]]
 *”პოსეიდონის ფესტივალი ელეუსინიასთან”, ჰენრიკ სიემირადზკი
 *”ქრისტეს გამოცხადება წმინდა მარიამ მაგდალინელთან”, ალექსანდრე ივანოვი
 *”მარია რუმიანცევას პორტრეტი”, ალექსეი ანტროპოვი
-*”ბოგატირი”, მიხაილ ვრუბელი
+*”ბოგატირი”, [[ვრუბელი, მიხაილ|მიხაილ ვრუბელი]]
 
 ===თანამედროვე (XIX-XX საუკუნეები)===
-*”შავი წრე”, კაზიმირ მალევიჩი
+*”შავი წრე”, [[მალევიჩი, კაზიმირ|კაზიმირ მალევიჩი]]
 
 ===საბჭოთა ხელოვნება===
-*’’ფაშისტებმა გადაიფრინეს”, არკადი პლასტოვი
+*’’ფაშისტებმა გადაიფრინეს”, [[პლასტოვი, არკადი|არკადი პლასტოვი]]
 
 ==რესურსები ინტერნეტში==
 *[http://www.rusmuseum.ru/eng/ მუზეუმის ვებ-გვერდი]
