*Empty MediaWiki Message*

--- a/უილიამ_ფოლკნერი.mw
+++ b/უილიამ_ფოლკნერი.mw
@@ -1,4 +1,4 @@
-[[სურათი:William_Faulkner.jpg|thumb|right|200px|უილიამ ფოლკნერი, 1954, კარლ ვან ვეხტენის ფოტო]] უილიამ კათბერტ ფოლკნერი (William Cuthbert Faulkner) ([[25 სექტემბერი]], [[1897]] – [[6 ივლისი]], [[1962]]) ამერიკელი მწერალი [[მისისიპი|მისისიპიდან]], ნობელის პრემიის ლაურეატი. მიუიხედავად იმისა, რომ მისი ნამუშევრები ხშირად საკმოდ რთული აღსაქმელია, ის ამერიკის ერთ-ერთ ყველაზე მნიშვნელოვან პროზაიკოს-მწერლად ითვლება.
+[[სურათი:William_Faulkner.jpg|thumb|right|200px|უილიამ ფოლკნერი, 1954, კარლ ვან ვეხტენის ფოტო]] უილიამ კათბერტ ფოლკნერი (William Cuthbert Faulkner) (* [[25 სექტემბერი]], [[1897]] ―   †   [[6 ივლისი]], [[1962]]) ამერიკელი მწერალი [[მისისიპი|მისისიპიდან]], ნობელის პრემიის ლაურეატი. მიუხედავად იმისა, რომ მისი ნამუშევრები ხშირად საკმოდ რთული აღსაქმელია, ის ამერიკის ერთ-ერთ ყველაზე მნიშვნელოვან პროზაიკოს-მწერლად ითვლება.
 
 ფოლკნერის წერის სტილი გამოირჩევა დიქციისთვის შერჩეული გრძელი, წყვეტილი ფრაზებით, მისი თანამედროვე და ხანგრძლივი მოწინააღმდეგის, [[ჰემინგუეი, ერნსტ|ერნსტ ჰემინგუეის]] მინიმალისტური სტილისგან კონტრასტით. ითვლება, რომ ფოლკნერი ერთადერთი ნამდვილი ამერიკელი მოდერნისტი პრაზაიკოსი იყო 1930-იანებში, რომელმაც განაგრძო ექპერიმენტალური ტრადიცია ევროპელი მწერლებისა - [[ჯოისი, ჯეიმს|ჯეიმს ჯოისი]], [[ვულფი, ვირჯინია|ვირჯინია ვულფი]] და [[პრუსტი, მარსელ|მარსელ პრუსტი]]. მის ნამუშევრები თვალსაჩინო მაგალითია ისეთი ლიტერატურული ტექნიკის გამოყენების, როგორიცაა ''[[ცნობიერების განუწყვეტლობა]]'', რამდენიმე პარალელური მთხრობელი ან თვალსაზრისი, და თხრობის დროთა ცვალებადობა.
 
@@ -29,10 +29,14 @@
 
 ==რესურსები ინტერნეტში==
 
-{{ესკიზი}}
+{{აშშ}}
 
 [[კატეგორია:ამერიკელები]]
-[[კატეგორია:მწერლები]]
+[[კატეგორია:ამერიკელი მწერლები]]
+[[კატეგორია: ნობელის პრემია ლიტერატურის დარგში]]
+[[კატეგორია:დაბადებული  1897]]
+[[კატეგორია:გარდაცვლილი 1962]]
+ 
 
 [[bs:William Faulkner]]
 [[ca:William Faulkner]]
