--- a/მუზეუმების_სია.mw
+++ b/მუზეუმების_სია.mw
@@ -63,6 +63,7 @@
 
 ===რუსეთი===
 *[[ერმიტაჟი (სანქტ-პეტერბურგი)]]
+*[[რუსული მუზეუმი (სანქტ-პეტერბურგი)]]
 *[[ტრეტიაკოვის გალერეა (მოსკოვი)]]
 
 ===საბერძნეთი===
