--- a/რუსული_მუზეუმი_(სანქტ-პეტერბურგი).mw
+++ b/რუსული_მუზეუმი_(სანქტ-პეტერბურგი).mw
@@ -6,6 +6,7 @@
 მუზეუმის მთავარი შენობა ''მახაილოვსკის სასახლეა'' -- დიდი თავადი მიხაილ პავლოვიჩის ბრწყინვალი [[ნეოკლასიციზმი|ნეოკლასიკური]] რეზიდენცია, აგებული 1819-25 წლებში [[როსი, კარლო|კარლო როსის]] პროექტით სანქტ-პეტერბურგის ხელოვნების მოედანზე. სასახლის ზოგიერთ დერეფანში შემორჩენილია ყოფილი იმპერიული რეზიდენციის თავდაპირველი პომპეზური ინტერიერი. მუზეუმის სხვა შენობათა შორისაა [[პეტრე I]]-ის ზაფხულის სახლი (1710-14), გრაფი ორლოვის მარმარილოს სასახლე (1768-85), იმპერატორი პავლეს წმ. მიხეილის ციხე-კოშკი (1797-1801), და რასტრელის პროექტის სტროგანოვის სასახლე ნევსკი პროსპექტზე (1752-54).
 
 ==კოლექცია==
+[[სურათი:Brullov.jpg|thumb|იტალიური შუადღე, კარლ ბრულოვი]]
 რუსული მუზეუმის კოლექციაში რუსული ხელოვნების შესაძლოა ყველაზე მნიშვნელოვანი ნიმუშებია მსოფლიოში. აქ მოთავსებულია სკულპტურების, ხელოვნების ობიექტების, გრაფიკული და ფერწერული ტილოების კოლექციები, მათ შორის სახელგანთქმული პორტრეტთა გალერეა.
 
 ===XVIII-XIX საუკუნეები===
