*Empty MediaWiki Message*

--- a/შარლ_IV_(საფრანგეთი).mw
+++ b/შარლ_IV_(საფრანგეთი).mw
@@ -1,5 +1,5 @@
 [[სურათი:401px-Charles-IV-le-bel 1-422x621.jpg|thumb|შარლ IV]] 
-'''კარლოს IV ლამაზი''' ''([[ფრანგული ენა|ფრანგ.]]: Charles le Bel)'' (* [[1294]] -  † [[3 იანვარი]], [[1328]], [[ვენსენი]])საფრანგეთის მეფე [[1316]]-დან. [[კაპეტინგი_(დინასტია)|კაპეტინგების]] დინასტიის წარმომადგენელი. [[ფილიპ_IV_(საფრანგეთი)|ფილიპ IV-ს]] და ჟანა ნავარელის შვილი.
+'''შარლ  IV ლამაზი''' ''([[ფრანგული ენა|ფრანგ.]]: Charles le Bel)'' (* [[1294]] -  † [[3 იანვარი]], [[1328]], [[ვენსენი]])საფრანგეთის მეფე [[1316]]-დან. [[კაპეტინგი_(დინასტია)|კაპეტინგების]] დინასტიის წარმომადგენელი. [[ფილიპ_IV_(საფრანგეთი)|ფილიპ IV-ს]] და ჟანა ნავარელის შვილი.
 
 ==ბიოგრაფია==
 
