*Empty MediaWiki Message*

--- a/ლუი_VIII.mw
+++ b/ლუი_VIII.mw
@@ -1,5 +1,5 @@
 [[სურათი:400px-Louis VIII le Lion.jpg|thumb|ლუი VIII]] 
-'''ლუი VIII''' ''([[ფრანგული ენა|ფრანგ.]]:  Louis VIII le Lion)'' (* [[5 სექტემბერი]], [[1187]], [[პარიზი]]  - † [[8 ნოემბერი]], [[1226]], [[მონტპენსიერი]])  საფრანგეთის მეფე [[1223]]-დან. [[კაპეტინგი_(დინასტია)|კაპეტინგების]] დინასტიის წარმომადგენელი. [[ფილიპ_II_(საფრანგეთი)|ფილიპ II-ს]] ([[1165]]-[[1223]]) და იზაბელა ჰეინატელის შვილი.
+'''ლუი VIII''' ''([[ფრანგული ენა|ფრანგ.]]:  Louis VIII le Lion)'' (* [[5 სექტემბერი]], [[1187]], [[პარიზი]]  - † [[8 ნოემბერი]], [[1226]], [[მონტპენსიერი]])  საფრანგეთის მეფე [[1223]]-დან. [[კაპეტინგი_(დინასტია)|კაპეტინგების]] დინასტიის წარმომადგენელი. [[ფილიპ_II_(საფრანგეთი)|ფილიპ II-ს]] ([[1165]]-[[1223]]) და [[დე ენო, იზაბელა|იზაბელა დე ენოს]] შვილი.
 
 
 
