--- a/რუსული_მუზეუმი_(სანქტ-პეტერბურგი).mw
+++ b/რუსული_მუზეუმი_(სანქტ-პეტერბურგი).mw
@@ -7,6 +7,7 @@
 
 ==კოლექცია==
 [[სურათი:Brullov.jpg|thumb|იტალიური შუადღე, კარლ ბრულოვი]]
+[[სურათი:Pavel Filonov HolyFamily.jpg|thumb|წმინდა ოჯახი, პაველ ფილონოვი]]
 რუსული მუზეუმის კოლექციაში რუსული ხელოვნების შესაძლოა ყველაზე მნიშვნელოვანი ნიმუშებია მსოფლიოში. აქ მოთავსებულია სკულპტურების, ხელოვნების ობიექტების, გრაფიკული და ფერწერული ტილოების კოლექციები, მათ შორის სახელგანთქმული პორტრეტთა გალერეა.
 
 ===XVIII-XIX საუკუნეები===
