--- a/რუსული_მუზეუმი_(სანქტ-პეტერბურგი).mw
+++ b/რუსული_მუზეუმი_(სანქტ-პეტერბურგი).mw
@@ -32,5 +32,6 @@
 [[კატეგორია:მუზეუმები]]
 
 [[de:Russisches Museum]]
+[[en:Russian Museum]]
 [[nl:Russisch Museum]]
 [[ru:Государственный Русский музей]]
