--- a/ლუი_VIII.mw
+++ b/ლუი_VIII.mw
@@ -23,15 +23,15 @@
 
 ===შვილები===
 
-* ფილიპე ([[1209]]-[[1218]])
+* ფილიპი ([[1209]]-[[1218]])
 * [[ლუი_IX_(საფრანგეთი)|ლუი IX]] ([[1214]]-[[1270]])
-* რობერ არტუა ([[1216]]-[[1250]])
+* რობერ დ'არტუა ([[1216]]-[[1250]])
 * ჟანა ([[1219]]-[[1232]])
-* ალფონსო ტულუზელი ([[1220]]-[[1271]])
-* ფილიპე დაგობერტი ([[1222]]-[[1232]])
+* ალფონს დე ტულუზი ([[1220]]-[[1271]])
+* ფილიპ-დაგობერი ([[1222]]-[[1232]])
 * იზაბელა ([[1225]]-[[1269]])
 * ეტიენი დაიბადა და მოკვდა ([[1226]])
-* კარლოს I სიცილიელი ([[1227]]-[[1285]])
+* [[შარლ I (სიცილია)|შარლI]] სიცილიელი ([[1227]]-[[1285]])
 
 {{საფრანგეთი}}
 
