*Empty MediaWiki Message*

--- a/ლუი_VIII.mw
+++ b/ლუი_VIII.mw
@@ -12,7 +12,7 @@
 
 
 ===მეფობა===
-[[სურათი:Louis8.jpg|thumb|left|200px|ლუი VIII-ს და ბლანკა კასტილიელის მეფედ კურთხევა რეიმსის ტაძარში]]
+[[სურათი:Louis8.jpg|thumb|right|200px|ლუი VIII-ს და ბლანკა კასტილიელის მეფედ კურთხევა რეიმსის ტაძარში]]
 
 
 
