*Empty MediaWiki Message*

--- a/რობერ_II_(საფრანგეთი).mw
+++ b/რობერ_II_(საფრანგეთი).mw
@@ -1,4 +1,4 @@
-'''რობერტ II''' ''([[ფრანგული ენა|ფრანგ.]]: Robert II le Pieux)'' (*[[27 მარტი]], [[972]] † [[20 ივლისი]], [[1031]]). მეფე [[996]]-დან. [[კაპეტინგი_(დინასტია)|კაპეტინგების]] დინასტიის მეორე მეფე. [[ჰუგო_კაპეტი|ჰუგო კაპეტის]] ([[938]]-[[996]]) და [[ადელაიდა აკვიტანელი|ადელაიდა აკვიტანელის]] ([[952]]-[[1004]]) შვილი.
+'''რობერ II''' ''([[ფრანგული ენა|ფრანგ.]]: Robert II le Pieux)'' (*[[27 მარტი]], [[972]] † [[20 ივლისი]], [[1031]]). მეფე [[996]]-დან. [[კაპეტინგი_(დინასტია)|კაპეტინგების]] დინასტიის მეორე მეფე. [[ჰუგო_კაპეტი|ჰუგო კაპეტის]] ([[938]]-[[996]]) და [[ადელაიდა აკვიტანელი|ადელაიდა აკვიტანელის]] ([[952]]-[[1004]]) შვილი.
 
 ==ბიოგრაფია==
 
