*Empty MediaWiki Message*

--- a/ფილიპ_II_ოგიუსტი.mw
+++ b/ფილიპ_II_ოგიუსტი.mw
@@ -1,5 +1,5 @@
 [[სურათი:416px-Philippe II Auguste.jpg|thumb|ფილიპ II]]
-'''ფილიპ II''' ''([[ფრანგული ენა|ფრანგ.]]: Philippe II)'' '''ფილიპ ოგიუსტად''' წიდებული. (* [[21 აგვისტო]], [[1165]], [[პარიზი]] -  † [[14 ივლისი]], [[1223]], [[მანტესი]])  საფრანგეთის მეფე [[1180]]-დან. [[კაპეტინგი_(დინასტია)|კაპეტინგების]] დინასტიის წარმომადგენელი. [[ლუი_VII_(საფრანგეთი)|ლუი VII-ს]] ([[1120]]-[[1180]]) და ადელაიდა შამპანელის შვილი.
+'''ფილიპ II''' ''([[ფრანგული ენა|ფრანგ.]]: Philippe II)'' '''ფილიპ ოგიუსტად''' წიდებული. (* [[21 აგვისტო]], [[1165]], [[პარიზი]] -  † [[14 ივლისი]], [[1223]], [[მანტი]])  საფრანგეთის მეფე [[1180]]-დან. [[კაპეტინგი_(დინასტია)|კაპეტინგების]] დინასტიის წარმომადგენელი. [[ლუი_VII_(საფრანგეთი)|ლუი VII-ს]] ([[1120]]-[[1180]]) და ადელაიდა შამპანელის შვილი.
 
 
 
