*Empty MediaWiki Message*

--- a/ტრეტიაკოვის_გალერეა.mw
+++ b/ტრეტიაკოვის_გალერეა.mw
@@ -1,7 +1,7 @@
 [[სურათი:Repin tretyakov.jpg|thumb|პაველ ტრეტიაკოვის პორტრეტი, რეპინი]]
-'''სახემწიფო ტრეტიაკოვის გალერეა''' მსოფლიოში რუსული ხელოვნების მოწინავე მუზეუმია.
+'''სახელმწიფო ტრეტიაკოვის გალერეა''' მსოფლიოში რუსული ხელოვნების მოწინავე მუზეუმია.
 
-გალერეის ისტორია იწყება [[1856]] წლიდან, როცა მოსკოველმა ვაჭარმა [[ტრეტიაკოვი, პაველ|პaველ ტრეტიაკოვმა]] (1832-98) შეისყიდა მისი თანამედროვე რუსი მხატვრების ნამუშევრები საკუთარი კოლექციის შექმნის მიზნით, რომელიც შესაძლოა მომავალში ხელოვნების ეროვნულ მუზეუმად გადაქცეულიყო. 1892 წელს ტრეტიაკოვმა მისი უკვე განთქმული კოლექცია რუს ხალხს წარუდგინა.
+გალერეის ისტორია იწყება [[1856]] წლიდან, როცა მოსკოველმა ვაჭარმა [[ტრეტიაკოვი, პაველ|პაველ ტრეტიაკოვმა]] (1832-98) შეისყიდა მისი თანამედროვე რუსი მხატვრების ნამუშევრები საკუთარი კოლექციის შექმნის მიზნით, რომელიც შესაძლოა მომავალში ხელოვნების ეროვნულ მუზეუმად გადაქცეულიყო. 1892 წელს ტრეტიაკოვმა მისი უკვე განთქმული კოლექცია რუს ხალხს წარუდგინა.
 
 გალერეის მთავარი შენობის პროექტი ეკუთვნის მხატვარ [[ვასნეცოვი, ვიქტორ|ვიქტორ ვასნეცოვს]] და ის განსაკუთრებულ რუსულ ზღაპრულ სტილშია გადაწყვეტილი. შენობა აიგო 1902-04 წლებში მოსკოვის [[კრემლი (მოსკოვი)|კრემლის]] სამხრეთით. მე-20 საუკუნის განამვლობაში გალერეა გაფართოვდა და მოიცვა რამდენიმე მეზობელი შენობაც, მათ შორის მე-17 საუკუნის წმ. ნიკოლოზის ეკლესია ტოლმაჩიში. ახალი შენობა კრიმსკი ვალზე მიეძღვნა თანამედროვე რუსული ხელოვნების ნიმუშებს.
 
