*Empty MediaWiki Message*

--- a/ტრეტიაკოვის_გალერეა.mw
+++ b/ტრეტიაკოვის_გალერეა.mw
@@ -1,4 +1,4 @@
-[[სურათი:Repin tretyakov.jpg|thumb|პაველ ტრეტიაკოვის პორტრეტი, რეპინი]]
+[[სურათი:Repin tretyakov.jpg|thumb|პაველ ტრეტიაკოვის პორტრეტი, [[რეპინი, ილია|რეპინი]]]]
 '''სახელმწიფო ტრეტიაკოვის გალერეა''' ([[რუსული ენა|რუს.]]: Государственная Третьяковская галерея, მის.: [[მოსკოვი]], ლავრუშინსკი პერეულოკ 10) მსოფლიოში რუსული ხელოვნების მოწინავე მუზეუმია მოსკოვში, [[რუსეთი]].
 
 გალერეის ისტორია იწყება [[1856]] წლიდან, როცა მოსკოველმა ვაჭარმა [[ტრეტიაკოვი, პაველ|პაველ ტრეტიაკოვმა]] (1832-98) შეისყიდა მისი თანამედროვე რუსი მხატვრების ნამუშევრები საკუთარი კოლექციის შექმნის მიზნით, რომელიც შესაძლოა მომავალში ხელოვნების ეროვნულ მუზეუმად გადაქცეულიყო. 1892 წელს ტრეტიაკოვმა მისი უკვე განთქმული კოლექცია რუს ხალხს წარუდგინა.
