*Empty MediaWiki Message*

--- a/ფაშიზმი.mw
+++ b/ფაშიზმი.mw
@@ -1,8 +1,12 @@
-პოლიტიკური მიმდინარეობა – '''ფაშიზმი''' (''იტალ. fascismo'') წარმოიშვა [[იტალია|იტალიაში]], რომლის ფუძემდებელიც იყო [[მუსოლინი, ბენიტო|ბენიტო მუსოლინი]]. მოგვიანებით მისმა იდეებმა პოპულარობა ჰპოვა ცენტრალურ და დასავლეთ ევროპაში, მაგრამ [[მეორე მსოფლიო ომი|მეორე მსოფლიო ომში]] [[გერმანია|გერმანიის]] დამარცხების შემდეგ მრავალ სახელმწიფოში აიკრძალა ხსენებული იდეოლოგია. მოგვიანებით ფაშიზმის იდეებმა გამოძახილი ჰპოვეს მსოფლიოს სხვადასხვა ქვეყნებში, თუმცა ყოველივე არასტაბილურ და არასერიოზულ ხასიათს ატარებდა.
+პოლიტიკური მიმდინარეობა – '''ფაშიზმი''' (''იტალ. fascismo'') წარმოიშვა [[იტალია|იტალიაში]], რომლის ფუძემდებელიც იყო [[მუსოლინი, ბენიტო|ბენიტო მუსოლინი]]. მოგვიანებით მისმა იდეებმა პოპულარობა ჰპოვა ცენტრალურ და დასავლეთ ევროპაში, მაგრამ [[მეორე მსოფლიო ომი|მეორე მსოფლიო ომში]] [[გერმანია|გერმანიის]] დამარცხების შემდეგ მრავალ სახელმწიფოში ხსენებული იდეოლოგია აკრძალულ იქნა. მოგვიანებით ფაშიზმის იდეებმა გამოძახილი ჰპოვეს მსოფლიოს სხვადასხვა ქვეყნებში, თუმცა ყოველი მათგანი არასტაბილურ და არასერიოზულ ხასიათს ატარებდა.
 
-სადღეისოდ, ფაშიზმის მიმდევრობა არაპოპულარულად ითვლება და ხშირად ფაშისტად ნათლავენ ადამიანს, რომელსაც არაფერი საერთო არა აქვს ამ მოძღვრებასთან, ხოლო უარეს შემთხვევაში ფაშიზმად ითვლება [[ნაციონალიზმი|ნაციონალიზმის]] გამოვლინება. რეალურად ფაშიზმი წარმოადგენს ზენაციონალურ (გნებავთ ტრანსნაციონალურ) ნაციონალიზმს, რომელიც წარმოადგენს ე.წ. ლიბერალურ-დემოკრატიული გლობალიზაციის საპირწონე მიმდინარეობას.
+სადღეისოდ, ფაშიზმის მიმდევრობა არაპოპულარულად ითვლება და ხშირად ფაშისტად ნათლავენ ადამიანს, რომელსაც ამ მოძღვრებასთან საერთო არაფერი აქვს, ხოლო უარეს შემთხვევაში ფაშიზმად ითვლება [[ნაციონალიზმი|უკიდურესი ნაციონალიზმის]] გამოვლინება. რეალურად ფაშიზმი წარმოადგენს ზენაციონალურ (გნებავთ ტრანსნაციონალურ) ნაციონალიზმს, რომელიც წარმოადგენს ე.წ. ლიბერალურ-დემოკრატიული გლობალიზაციის საპირწონე მიმდინარეობას.
 
-სავარაუდოდ, მოსალოდნელია, რომ ლიბერალური დემოკრატიის გლობალური მასშტაბით გაბანკროტების შემთხვევაში ფაშიზმის იდეები ახალ გამოძახილს ჰპოვებენ თანამედროვე სამყაროში.
+არსებობს მოსაზრება, რომ ლიბერალური [[დემოკრატია|დემოკრატიის]] გლობალური მასშტაბით გაბანკროტების შემთხვევაში ფაშიზმის იდეები ახალ გამოძახილს ჰპოვებენ თანამედროვე სამყაროში.
+
+{{იდეოლოგია}}
+[[კატეგორია:იდეოლოგიები]]
+
 
 [[ar:فاشية]]
 [[be:Фашызм]]
