--- a/ლუი_VIII.mw
+++ b/ლუი_VIII.mw
@@ -30,7 +30,7 @@
 * [[ალფონს დე პუატიე]] ([[1220]]-[[1271]])
 * ფილიპ-დაგობერი ([[1222]]-[[1232]])
 * იზაბელა ([[1225]]-[[1269]])
-* ეტიენი დაიბადა და მოკვდა ([[1226]])
+* ეტიენი ([[1226]] - დაბადებისთანავე გარდაიცვალა)
 * [[შარლ I (სიცილია)|შარლ I]] სიცილიელი ([[1227]]-[[1285]])
 
 {{საფრანგეთი}}
