*Empty MediaWiki Message*

--- a/პორტვაინი.mw
+++ b/პორტვაინი.mw
@@ -1,5 +1,5 @@
 [[სურათი:Port wine.jpg|thumb|200px|ჭიქა პორტვეინი]]
-'''პორტვეინი''' ტკბილი, შემაგრებული ღვინოა დოუროს ხეობიდან, [[პორტუგალია|პორტუგალიის]] ჩრდილოეთით; მისი სახელი მომდინარეობს ქალაქ [[პორტუ|პორტუდან]] - პორტის ღვინის ექსპორტისა და ვაჭრობის ცენტრი. ამ ღვინოს პორტუგალიაში მე-15 საუკუნიდან ამზადებენ. პორტვეინი ძალზედ პოპულარული გახდა [[ინგლისი|ინგლისში]] [[1703]] წლის [[მეთუის ზავი|მეთუის ზავის]] გამო, რის შემდეგაც ვაჭრებს საშუალება მიეცათ ღვინის იმპორტი განეხორციელებინათ შეღავათიანი ბაჟით, მაშინ როცა საფრანგეთთან ომის გამო ინგლისი ფრანგულ ღვინოს მოკლებული გახდა. მსგავსი ღვინო, რომელსაც ასევე ”პორტს” უწოდებენ მზადდება სხვა ქვეყნებშიც, მათ შორის ავსტრალიაში, ინდოეთში და აშშ-ში. სენტ-აუგუსტინაში, [[ფლორიდა]], მას უკვე ამზადებდნენ მე-16 საუკუნიდან მოყოლებული. ზოგიერთ ქვეყანაში, მათ შორის კანადასა და ევროპის კავშირში, მხოლოდ პორტუგალურ ღვინოს შეიძლება ეწოდოს ”პორტი”.
+'''პორტვეინი''' (პორტ.: Vinho do Porto, პორტუს ღვინო) ტკბილი, შემაგრებული ღვინოა დოუროს ხეობიდან, [[პორტუგალია|პორტუგალიის]] ჩრდილოეთით; მისი სახელი მომდინარეობს ქალაქ [[პორტუ|პორტუდან]] - პორტის ღვინის ექსპორტისა და ვაჭრობის ცენტრი. ამ ღვინოს პორტუგალიაში მე-15 საუკუნიდან ამზადებენ. პორტვეინი ძალზედ პოპულარული გახდა [[ინგლისი|ინგლისში]] [[1703]] წლის [[მეთუის ზავი|მეთუის ზავის]] გამო, რის შემდეგაც ვაჭრებს საშუალება მიეცათ ღვინის იმპორტი განეხორციელებინათ შეღავათიანი ბაჟით, მაშინ როცა საფრანგეთთან ომის გამო ინგლისი ფრანგულ ღვინოს მოკლებული გახდა. მსგავსი ღვინო, რომელსაც ასევე ”პორტს” უწოდებენ მზადდება სხვა ქვეყნებშიც, მათ შორის ავსტრალიაში, ინდოეთში და აშშ-ში. სენტ-აუგუსტინაში, [[ფლორიდა]], მას უკვე ამზადებდნენ მე-16 საუკუნიდან მოყოლებული. ზოგიერთ ქვეყანაში, მათ შორის კანადასა და ევროპის კავშირში, მხოლოდ პორტუგალურ ღვინოს შეიძლება ეწოდოს ”პორტი”.
 
 პორტვეინი, როგორც წესი, უფრო ბლანტი, მდიდარი ბუკეტის, ტკბილი და მაღალალკოჰოლიანია ვინემ სხვა ღვინოები. ეს გამოწვეულია ღვინოს შესამაგრებლად მასში დისტილირებული ყურძნის სპირტის დამატებით ფერმენტაციის შესაჩერებლად დუღილის პერიოდში შაქრის მთლიანად ალკოჰოლად გადაქცევამდე. მას, როგორც წესი, საჭმლის შემდეგ დესერტად მიირთმევენ, ან ყველთან ერთად. თუმცა საფრანგეთში, პორტვეინი აპერიტივია. ღვინოში ალკოჰოლის შემცველობა მერყეობს 18%-დან 30%-მდე.
 
