--- a/ტრეტიაკოვის_გალერეა.mw
+++ b/ტრეტიაკოვის_გალერეა.mw
@@ -13,6 +13,7 @@
 [[კატეგორია:მუზეუმები]]
 
 [[de:Tretjakow-Galerie]]
+[[en:Tretyakov Gallery]]
 [[fa:نگارخانه ترتیاکوف]]
 [[fr:Galerie Tretiakov]]
 [[nl:Tretjakov-Galerij]]
