--- a/31_მარტი.mw
+++ b/31_მარტი.mw
@@ -3,10 +3,14 @@
 
 ==დღის მოვლენები==
 
-*[[1889]] : ეიფელის კოშკის გახსნა პარიზში.
-*[[1949]] : [[ნიუფაუნდლენდი]] გახდა კანადის კონფედერაციის წევრი.
-*[[1999]] : ბორის ელცინი გადადგა პრეზიდენტის პოსტიდან.
-
+*[[1889]] : [[ეიფელის კოშკი|ეიფელის კოშკის]] ინაუგურაცია [[პარიზი|პარიზში]].
+*[[1931]] : [[მიწისძვრა]] ანადგურებს [[მანაგუა|მანაგუას]], [[ნიკარაგუა]].
+*[[1949]] : [[ნიუფაუნდლენდი]] გახდა [[კანადა|კანადის]] კონფედერაციის წევრი.
+*[[1964]] : [[დიქტატურა ბრაზილიაში]] იწყება, გენერალი [[ბრანკო, კასტელო|კასტელო ბრანკოს]] მეთაურობით.
+*[[1967]] : [[ჰენდრიქსი, ჯიმი|ჯიმი ჰენდრიქსი]] წვავს საკუთარ გიტარას პირველად ლონდონის ასტორიის თეატრში. რის შედეგადაც ის ხელზე მეორე ხარისხის დამწვრობისთვის ჰოსპიტალიზებულ იქნა.
+*[[1979]] : ბრიტანეთის ბოლო ჯარისკაცი ტოვებს [[მალტა|მალტის]] კუნძულებს.
+*[[1999]] : [[ელცინი, ბორის|ბორის ელცინი]] გადადგა რუსეთის პრეზიდენტის პოსტიდან.
+*[[2004]] : [[გუგლი]] აქვეყნებს [[გმეილს]] - პირველი ვებ-ფოსტა 1 გიგაბაიტიანი სათავსით.
 
 ==ამ დღეს დაბადებულნი==
 
