--- a/ხმელთაშუა_ზღვა.mw
+++ b/ხმელთაშუა_ზღვა.mw
@@ -15,7 +15,7 @@
 ==ეკოლოგია==
 ==რესურსები ინტერნეტში==
 
-[[კატეგორია:ატლანტის ოკეანე]]
+[[კატეგორია:ატლანტის ოკეანის აუზი]]
 [[კატეგორია:ზღვები]]
 
 [[af:Middellandse See]]
