*Empty MediaWiki Message*

--- a/ძუძუმწოვრები.mw
+++ b/ძუძუმწოვრები.mw
@@ -1,3 +1,4 @@
+[[სურათი:Canis lupus laying in grass.jpg|thumb|300px|]]
 '''ძუძუმწოვრები''' (Mammalia), ცხოველების კლასი [[ხერხემლიანები|ხერხემლიანების]] ქვეტიპისა. მათი სხეულის სიგრძე 1,5 სმ-იდან (ფუღუ) - 33 მ-ზე მეტია (ლურჯი ვეშაპი), სესაბამისად მასა - 1,5 გ-იდან, 190 ტ აღწევს. ჩვეულებრივ წაგრძელებული სხეული აქვთ, 5-5-თითიან 4 კიდურზე დაყრდნობილი. ზოგს (ცხენებსა და სხვა) ნაკლები თითი აქვს. [[ხელფრთიანები|ხელფრთიანების]] კიდურები ფრთებადაა გადაქცეული, ხოლო [[ფარფლფეხიანები|ფარფლფეხიანებისა]] - ფარფლებად. ცხოვრების ნირის შესაბამისად, ძუძუმწოვრებს თევზისებური სხეული აქვს, უკანა კიდურები არ გააჩნია. კანი ბალნით აქვსთ დაფარული. ვეშაპებს, ბეთჰემოთს და ზოგ სხვა ძუძუმწოვრებს ბალნიანი საფარველი მეორეულად რედუცირებული აქვს. კანის წარმონაქმნებია ბრჭყალი, ჩლიქი, ფრჩხილი, რქა, ქერცლი და სხვა. ძუძუმწოვრებს აქვთ მუშკის, თებოს, ოფლისა და სხვა ჯირკვლები. მნიშვნელოვანია სარძევე კირკვლები, რომელთა სარძევე ჯირკვლები, რომელთა სეკრეტით დედა კვებავს თავის ნაშიერებს.
 
 {{ესკიზი}}  
