--- a/შავი_ზღვა.mw
+++ b/შავი_ზღვა.mw
@@ -8,6 +8,7 @@
 მნიშვნელოვანი ქალაქები შავი ზღვის სანაპიროზე არის: [[სტამბოლი]] (ყოფილი [[კონსტანტინოპოლი]]), [[ბურგასი]], [[ვარნა]], [[კონსტანცა]], [[იალტა]], [[ოდესა]], [[სევასტოპოლი]], [[ქერჩი]], [[ნოვოროსიისკი]], [[სოჭი]], [[სოხუმი]], [[ფოთი]], [[ბათუმი]], [[ტრაბზონი]] და [[სამსუნი]].
 
 [[კატეგორია:ზღვები]]
+[[კატეგორია:ატლანტის ოკეანის აუზი]]
 
 [[ar:بحر أسود]]
 [[ast:Mar Prieta]]
