*Empty MediaWiki Message*

--- a/ბოსფორი.mw
+++ b/ბოსფორი.mw
@@ -8,7 +8,7 @@
 {{ესკიზი}}
 
 [[კატეგორია:სრუტეები]]
-[[კატეგორია:ატლანტის ოკეანე]]
+[[კატეგორია:ატლანტის ოკეანის აუზი]]
 
 [[ar:مضيق بوسفور]]
 [[ast:Bósforo]]
