*Empty MediaWiki Message*

--- a/გედები.mw
+++ b/გედები.mw
@@ -1,4 +1,4 @@
-'''გედები''', [[ფრინველები]] [[იხვისებრნი|იხვისებრთა]] ოჯახისა. მათი სხეულის სიგრძე 180 სმ აღწევს, წონა 13 კგ. აქვთ გრძელი კისერი. კარგად ფრენენ და ცურავენ, ცუდად დადიან და ვერ ყვინთავენ. გედების 6 სახეობა გაერთიანებულია 2 გვარში: Cygnus დაChenopsis პირველი მოიცავს 5 სახეობას, რომლებიც გავრცელებული არიან ევროპაში, აზიასა და ამერიკაში; მეორე გვარში შედის 1 სახეობა - შავი გედი, რომელიც [[ავსტრალია|ავსტრალიასა]] და [[ტასმანია|ტასმანიაში]] ბინადრობს. [[საქართველო|საქართველოში]] მხოლოდ მიმოფრენისას გვხვდება [[სისინა]] (ანუ წითელნისკარტა) გედი და [[მყივანი გედი]].[[მონოგამია|მონოგამები]] არიან. მამალი ეხმარება დედალ [[ბუდე|ბუდის]] შენებაში. დებენ 5-7 (12-მდე) კვერცხს. დედალი 35-40 დღის განმავლობაში კრუხობს. იკვებებიან მცენარეული საკვებით და წყლის უხერხემლოები|უხერხემლო ცხოველებით. ზოგან სარეწაო მნიშვნელობა აქვს. გამოსადეგია გედების [[ბუმბული]] და ხორცი. სისინა გედს აშინაურებენ.
+'''გედები''', [[ფრინველები]] [[იხვისებრნი|იხვისებრთა]] ოჯახისა. მათი სხეულის სიგრძე 180 სმ აღწევს, წონა 13 კგ. აქვთ გრძელი კისერი. კარგად ფრენენ და ცურავენ, ცუდად დადიან და ვერ ყვინთავენ. გედების 6 სახეობა გაერთიანებულია 2 გვარში: Cygnus და Chenopsis პირველი მოიცავს 5 სახეობას, რომლებიც გავრცელებული არიან ევროპაში, აზიასა და ამერიკაში; მეორე გვარში შედის 1 სახეობა - შავი გედი, რომელიც [[ავსტრალია|ავსტრალიასა]] და [[ტასმანია|ტასმანიაში]] ბინადრობს. [[საქართველო|საქართველოში]] მხოლოდ მიმოფრენისას გვხვდება [[სისინა]] (ანუ წითელნისკარტა) გედი და [[მყივანი გედი]].[[მონოგამია|მონოგამები]] არიან. მამალი ეხმარება დედალ [[ბუდე|ბუდის]] შენებაში. დებენ 5-7 (12-მდე) კვერცხს. დედალი 35-40 დღის განმავლობაში კრუხობს. იკვებებიან მცენარეული საკვებით და წყლის [[უხერხემლოები|უხერხემლო]] ცხოველებით. ზოგან სარეწაო მნიშვნელობა აქვს. გამოსადეგია გედების [[ბუმბული]] და ხორცი. სისინა გედს აშინაურებენ.
 
 
 [[კატეგორია: იხვისებრნი]]
