*Empty MediaWiki Message*

--- a/ქათამურა_(გვარი).mw
+++ b/ქათამურა_(გვარი).mw
@@ -1,5 +1,5 @@
 [[სურათი:Porzana porzana 3 (Marek Szczepanek).jpg|thumb|right|ქათამურა (Porzana porzana)]]
-'''ქათამურა''' (Porzana), [[ფრინველები|ფრინველთა]] გვარი [[წეროსნაირნი|წეროსნაირთა]] რიგისა. გავრცელებულია მთელ მსოფლიოში, მოიცავს 12 სახეობას, რომელთაგან საქართველოში (მიმოფრენისას) - 3: [[ქათამურა]] (Porzana porzana), [[პატარა ქათამურა]] (Porzana parva) და [[პაწაწა ქათამურა]] (Porzana pusilla). მათი სხეულის სიგრძეა 16,5-28 სმ. ბინადრობენ წყალსაცავების დამშრალ ნაპირებზე, ჭაობებსა და ნოტიო მინდვრებზე. სწრაფად მოძრაობენ ხშირ ბალახნარში, კარგად ცურავენ, ყვინთავენ. [[ბუდე|ბუდეს]] იკეთებენ მიწაზე დებენ 7-9კვერცხს, იკვებებიან მცენარეული (თესლები, აღმონაცენები) და ცხოველური (უხერხემლოები) საკვებით. სპორტული ნადირობის ობიექტები არიან.
+'''ქათამურა''' (Porzana), [[ფრინველები|ფრინველთა]] გვარი [[წეროსნაირნი|წეროსნაირთა]] რიგისა. გავრცელებულია მთელ მსოფლიოში, მოიცავს 12 სახეობას, რომელთაგან საქართველოში (მიმოფრენისას) - 3: [[ქათამურა]] (Porzana porzana), [[პატარა ქათამურა]] (Porzana parva) და [[პაწაწა ქათამურა]] (Porzana pusilla). მათი სხეულის სიგრძეა 16,5-28 სმ. ბინადრობენ წყალსაცავების დამშრალ ნაპირებზე, ჭაობებსა და ნოტიო მინდვრებზე. სწრაფად მოძრაობენ ხშირ ბალახნარში, კარგად ცურავენ, ყვინთავენ. [[ბუდე|ბუდეს]] იკეთებენ მიწაზე დებენ 7-9კვერცხს, იკვებებიან მცენარეული (თესლები, აღმონაცენები) და ცხოველური ([[უხერხემლოები]]) საკვებით. სპორტული ნადირობის ობიექტები არიან.
 
 
 [[კატეგორია:წეროსნაირნი]]
