*Empty MediaWiki Message*

--- a/ქვეწარმავლები.mw
+++ b/ქვეწარმავლები.mw
@@ -2,6 +2,8 @@
 
 [[ფრინველები|ფრინველებთან]] და [[ძუძუმწოვრები|ძუძუმწოვრებთან]] ერთად განეკუთვნებიან უმაღლეს ხერხემლიანებს - [[ამნიონიანები|ამნიონიანებს]], რომელთა შორისაც ისინი უმდაბლეს ჯგუფს შეადგენენ.
 {{ესკიზი}}  
+
+[[კატეგორია:ქვეწარმავლები]]
 [[af:Reptiel]]
 [[ar:زواحف]]
 [[bg:Влечуги]]
