--- a/ეიფელის_კოშკი.mw
+++ b/ეიფელის_კოშკი.mw
@@ -1,6 +1,16 @@
 [[სურათი:Tour eiffel at sunrise from the trocadero.jpg|thumb|ეიფელის კოშკი გარიჟრაჟზე]]
 '''ეიფელის კოშკი''' (ფრანგ.: Tour Eiffel) ლითონის კონსტრუქციაა [[შამ-დე-მარსი|შამ-დე-მარსზე]], [[სენა (მდინარე)|სენასთან]], [[პარიზი|პარიზში]]. ეს პარიზის ყველაზე მაღალი სტრუქტურა და [[საფრანგეთი|საფრანგეთის]] ყველაზე ცნობილი სიმბოლოა. სახელი დაერქვა პროექტის ავტორის ინჟინერი [[ეიფელი, გუსტავ|გუსტავ ეიფელის]] პატივსაცემად და ის ქალაქის ყველაზე პოპულარული ტურისტული ღირშესანიშნაობაა, რომელსაც წელიწადში 5,5 მილიონზე მეტი დამთვალიერებელი ჰყავს.
 
+==სტატისტიკა==
+კოშკის სიმაღლე 300 მეტრია, რაც დაახ. 75 სართულს უდრის. მის თავზე 24 მეტრის სიმაღლის ანტენაა, რაც სტრუქტურის საერთო სიმაღლეს 324 მ ნიშნულზე სწევს. აშენების დროს 1889 წელს, ეიფელის კოშკი ყველაზე მაღალი სტრუქტურა იყო მსოფლიოში, ტიტული, რომელიც მან 1930 წლამდე შეინარჩუნა, როცა ნიუ-იორკის კრაისლერ ბილდინგის (319 მ) მშენებლობა დასრულდა, თუმცა ეიფელი სიმაღლეში მაინც უსწრებდა თუ მათ სიმაღლეში ამ სტრუქტურების ანძები ჩაითვლებოდა. ამჟამად ეიფელის კოშკი საფრანგეთში სიმაღლით მეორე სტრუქტურაა, 350 მ სიმაღლის ალუის გრძელი ტალღების გადამცემი ანძის (1939) აგების შემდეგ. საფრანგეთის სიმაღლით მესამე სტრუქტურაა ლა [[ტურ მონპარნასი]], [[მონპარნასი|მონპარნასის]] უბანში (209 მ). 
+
+კოშკის ლითონის სტრუქტურა 7.300 ტონას იწონის, მისი საერთო წონა კი 10.100 ტონაა. ზედა პლატფორმაზე ასასვლელი საფეხურების რაოდენობა იცვლებოდა კოშკის ისტორიის განმავლობაში, რამდენიმე რენოვაციის შედეგად: აშენების მომენტში 1889 წელს 1710 საფეხური ადიოდა სამიტის პლატფორმაზე 300.65 მ ნიშნულზე;  1980 წლის რენოვაციის შემდეგ საფეხურების რაოდენობა 1920-მდე გაიზარდა; ამჟამად 1665 საფეხუია, თუმცა ზედა პლატფორმაზე საფეხურებით ასვლა შეუძლებელია და დამთვალიერებლებს მხოლოდ ლიფტების გამოყენება შეუძლიათ.
+
+ჰაერის ტემპერატურის მიხედვით ეიფელის კოშკის თავი შეიძლება მზისგან გადახურების გამო 8 სმ-მდე გადაიწიოს, მზე მიფიცხებულ მხარეს ლითონის გაფართოებისგან.
+
+კოშკის რემონტი მოიცავს ყოველ შვიდ წელიწადში 50 ტონა სამი ფენა საღებავის წასმას კონსტრუქციის ლითონის ზედაპირზე ჟანგისგან დასაცავად. დროგამოშვებით საღებავის ფერი იცვლება -- ამჟამად კოშკი მოყავისფროდაა შეღებილი. პირველ სართულზე ინტერაქტიული კონსოლებია დამონტაჟებული, რომელშიც მსურველებს შეუძლიათ კენჭი ჰყარონ კოშკის მომავალი შეფერილობის შესარჩევად.
+
+
 [[კატეგორია:პარიზის არქიტექტურა]]
 [[კატეგორია:მსოფლიოს უმაღლესი სტრუქტურები]]
 
