*Empty MediaWiki Message*

--- a/საფრანგეთი.mw
+++ b/საფრანგეთი.mw
@@ -5,7 +5,7 @@
 {| cellpadding=2 cellspacing=0
 
 |- align=center
-| width="140px" | <div style="background-color: #000; padding: 1px; float: left">[[Image:France_flag_300.png|130px|საფრანგეთის დროშა]]</div>
+| width="140px" | <div style="background-color: #000; padding: 1px; float: left">[[Image:Flag of France.svg|130px|საფრანგეთის დროშა]]</div>
 | width="140px" | [[Image:France coa.png|130px|საფრანგეთის გერბი]]
 |- align=center
 | [[საფრანგეთის დროშა]] || საფრანგეთის გერბი
