*Empty MediaWiki Message*

--- a/ალექსანდრე_ნეველის_ორდენი_(საბჭოთა).mw
+++ b/ალექსანდრე_ნეველის_ორდენი_(საბჭოთა).mw
@@ -9,3 +9,5 @@
 [[en:Order of Alexander Nevsky]]
 [[ru:Орден Александра Невского]]
 [[sl:Red Aleksandra Nevskega (Sovjetska zveza)]]
+[[de:Alexander-Newski-Orden]]
+[[pl:Order  św. Aleksandra Newskiego]]
