/* მეორე მსოფლიო ომი */

--- a/კარლ_დენიცი.mw
+++ b/კარლ_დენიცი.mw
@@ -52,6 +52,18 @@
 ==მეორე მსოფლიო ომი==
 
 
+
+==ომის შემდგომი პერიოდი==
+დიონიცის მთავრობის არსებობამ კაპიტულაციის შემდეგ აზრი დაკარგა. [[1945]] წლის [[23 მაისი|23 მაისს]] დიონიცი და მთელი რაიხის მთავრობა, ისევე როგორც «[[ვერმახტი|ვერმახტის]]» უმაღლესი მთავარსარდლობა ბრიტანელთა მიერ დაპატიმრებულ იქნენ [[მიურვიკი|მიურვიკში]], ქალაქ [[ფლენსბურგი|ფლენსბურგთან]] ახლოს. [[1945]] წლის ოქტომბერში დიონიცი [[ნიურნბერგის პროცესი|სამხედრო დამნაშავეთა ტრიბულნალს]] გადასცეს [[ნიურნბერგი|ნიურნბერგში]].
+
+მისი ადვოკატის [[კრანცბიულერი, ოტო|ოტო კრანცბიულერის]] დამსახურებაა ის ფაქტი, რომ დიონიცის და გროსადმირალ [[რედერი, ერიხ|რედერის]] ბრალდებებიდან მოხსნილ იქნა პუნქტი - „მტრული სავაჭრო გემების გაუფრთხილებლად ჩაძირვის შესახებ“. ამ პუნქტისათვის ორივე გროსადმირალს სიკვდილით დასჯა ელოდათ. სასამართლოზე დიონიცის და რედერის სასარგებლოდ წარსდგა აგრეთვე აშშ-ის წყნარი ოლეანის ფლოტის მთავარსარდალი, ადმირალი [[ნიმიცი, ჩესტერ უილიამ|ჩესტერ უილიამ ნიმიცი]], რომელმაც წერილობით ჩვენებაში მიუთითა, რომ აშშ-ის ფლოტის სარდლობის ბრძანებები წყალქვეშა ნავებით ბრძოლის წარმოების ხერხების შესახებ არსებითად არ განსხვავდებოდა «[[კრიგსმარინე]]»-ს სარდლობის ბრძანებებისაგან.  ეს ეხებოდა აგრეთვე «[[ბრძანება ლაკონია]]»-საც.
+
+დიონიცი გაასამართლეს მე-2 (მონაწილეობა თავდასხმით ომში) და მე-3 (დანაშაული ომის წესების წინააღმდეგ) საბრალდებო პუნქტების მიხედვით და 10 წლით პატიმრობა მიუსაჯეს [[შპანდაუ|შპანდაუში]]. მასთან ერთად იჯდნენ [[ჰესი, რუდოლფ|რუდოლფ ჰესი]], [[რედერი, ერიხ|ერიხ რედერი]], [[ფუნკი, ვალთერ|ვალთერ ფუნკი]], [[შპეერი, ალბერტ|ალბერტ შპეერი]], [[შირახი, ბალდურ ფონ|ბალდურ ფონ შირახი]] და [[ნოირათი|კონსტანტინ ფონ|კონსტანტინ ფონ ნოირათი]].
+
+სასჯელის სრული ვადის მოხდის შემდეგ კარლ დიონიცი [[1956]] წელს გაათავისუფლეს და რადგან მისი მეუღლე ინგებორგი უკვე [[1952]] წელს გარდაიცვალა და მისი ორივე ვაჟი [[დიონიცი, კლაუს|კლაუსი]] და [[დიონიცი, პეტერ|პეტერი]] ომში დაიღუპა, მარტოდმარტო ცხოვრობდა [[აუმიულე|აუმიულეში]] [[ჰამბურგი|ჰამბურგთან]]. [[1968]] წელს მან გამოაქვეყნა ავტობიოგრაფია „ჩემი ცვალებადი ცხოვრება“, რომელშიც თავის თავს ნაცისტური რაჟიმისაგან დისტანცირებულ სამხედრო მოღვაწედ წარმოადგენს.
+
+უკანასკნელი გერმანელი ოფიცერი, რომელიც [[მარშალი|მარშლის]] რანგს ატარებდა 89 წლის ასაკში გარდაიცვალა [[1980]] წლის [[24 დეკემბერი|24 დეკემბერს]]. კარლ დიონიცი დაკრძალულია ვალდფრიდჰოფის სასაფლაოზე აუმიულეში.
+
 ==ჯილდოები და დაწინაურებები==
 ===ჯილდოები=== 
 * «[[ნსდაპ-ის ოქროს პარტიული ნიშანი]]» ([[1944]]) საპატიო წევრი - Goldenes Parteiabzeichen der Nationalsozialistischen Deutschen Arbeiterpartei 
