/* «სს» - დამოუკიდებელი ორგანიზაცია */

--- a/შუცშტაფელი.mw
+++ b/შუცშტაფელი.mw
@@ -36,6 +36,60 @@
 
 ნაცისტების ხელისუფლებაში მოსვლის შემდეგ «სა», «სს» და «[[შტალჰელმი]]» პოლიციური პრივილეგიებით აღჭურვილ ორგანიზაციებად იქცნენ, რომელთაც ევალებოდათ პოლიტიკურ მოღინააღმდეგეთა დევნა. უკვე [[1933]] წლის აპრილისათვის მათ მიერ დაახ. 25.000 რეჟიმის მოწინააღმდეგე იქნა დაპატიმრებული. «სა»-მ და «სს»-მა დაიწყეს პირველი [[საკონცენტრაციო ბანაკი|საკონცენტრაციო ბანაკების]] მშენებლობა [[დახაუ (კონცბანაკი)|დახაუსა]] და ორანიენბურგში ([[ზაკსენჰაუზენი (კონცბანაკი)|ზაკსენჰაუზენი]]).
 
+[[1934]] წლის [[30 ივნისი|30 ივნისსა]] და [[1 ივლისი|1 ივლისს]] მოწყობილი პოლიტიკური წმენდის დროს ([[რიომის პუტჩი]]) «სს»-ის შენაერთებმა “ლაიბშტანდარტი ადოლფ ჰიტლერი” და “მკვდარი თავის ქალა“ ფიზიკურად გაუსწორდნენ «სა»-ს უმღლეს სარდლობას და ჰიტლერის რეჟიმის პოლიტიკურ მოწინააღმდეგეებს კონსერვატიული ბანაკიდან. [[20 ივლისი|20 ივლისს]] ადოლფ ჰიტლერმა განაცხადა: „«სს»-ის დიდი დამსახურებისთვის, გამოჩენილი განსაკუთრებით  1934 წლის 30 ივნისის მოვლენების დროს, ვამაღლებ მე მას დამოუკიდებელ ორგანიზაციად „ნსდაპ“-ის ფარგლებში“ ([[გერმ.]]: „Im Hinblick auf die großen Verdienste der SS, besonders im Zusammenhang mit den Ereignissen vom 30. Juni 1934, erhebe ich dieselbe zu einer selbständigen Organisation im Rahmen der NSDAP.“ )
+
+«სს»-ის დაქვემდებარებაში გადავიდა რაიხის ყველა საკონცენტრაციო ბანაკი, რომლებსაც მანამდე ნაწილობრივ «სა»-ც განაგებდა. «სს-ის „მკვდარი თავის ქალას“ შენაერთები ამირიდან მარტო კონცბანაკების დაცვით ფუქციას ასრულებდნენ. [[1934]] წლის ნოემბერში [[პრინც-ალბრეხტ-პალე]], რომელიც [[ბერლინი|ბერლინში]] ვილჰელმშტრასეს 102-ში მდებარეობდა, შეუერთდა პრინც-ალბრეხტ-შტრასე 8-ზე მდებარე შენობათა კომპლექსს და მასში «სს»-ის რაიხსფიურერის უშიშროების აპარატი იქნა განლაგებული.
+
+[[1935]] წელს «სს»-ის განმკარგულებელი აპარატი გადაკეთდა «[[საზოგადო სს]]»-ად. «სს»-ის შეიარარებული ნაწილი ორად გაიყო: «[[სს-ის სარეზერვო ჯარები]]» და «[[სს-ის მკვდარი თავის ქალას შენაერთები]]». შემდგომში ისინი «[[ვაფენ-სს]]»-ის შემადგენლობაში შევიდნენ.
+
+«საზოგადო სს»-ი, რომელსაც «მამულის-სს» ან «შავ-სს»-საც უწოდებნდნენ, ემორჩილებოდა სპეციალურად მისთვის შექმნილ «საზოგადო სს-ის სამმართველოს“, რომელიც ბერლინში მდებარეობდა. ამით დამთავრდა «სს»-ის კლასიკური დაყოფა 3 ნაწილად, რომელმაც [[1945]] წლამდე იარსება:
+
+* საზოგადო-სს - Allgemeine-SS
+* სს-ის მკვდარი თავის ქალას შენაერთები - SS-Totenkopf-Standarten
+* სს-ისსარეზერვო ჯარები - SS-Verfügungstruppe
+
+[[1939]]-[[1940]] წლებში «სს»-ის შიგნით ჩამოყლიბდა რამდენიმე მთავარი სამმართველო და განყოფილება:
+
+* [[ფჰა|სამმართავი მთავარი სამმართველო]], შემოკლ.: «ფჰა», ([[გერმ.]]: Führungshauptamt - FHA) - ეს იყო «სს»-ის სამეთაურო შტაბი, რომლის დაქვემდებარებაში იყვნენ: ოფიცერთა სკოლები, სამედიცინო და სატრანსპორტო მომსახურების საქმე, ფინანსები და შეიარაღება.
+* [[რუსჰა|რასისა და დასახლების მთავარი სამმართველო]], შემოკლ.: «რუსჰა», ([[გერმ.]]: Rasse- und Siedlungshauptamt - RuSHA) - ამ სამმართველოს ევალებოდა „რასობრივად ღირებული“ მმართველი ელიტის მომზადება და აღზრდა.
+* [[რსჰა|რაიხის უშიშროების მთავარი სამმართველო]], შემოკლ.: «რსჰა», ([[გერმ.]]: Reichssicherheitshauptamt - RSHA) - «რსჰა»-ს ევალებოდა საპოლიციო ფუნქციების შესრულება.
+* [[სდ|უშიშროების სამსახური]], შემოკლ.: «სდ», ([[გერმ.]]: Siecherheitsdinst – SD) – [[ჰაიდრიხი, რაინჰარდ|რაინჰარდ ჰაიდრიხის]] სამმართველო საიდუმლო სამსახურის ფუნქციებს ასრულებდა და ევალებოდა საგარეო და საშინაო მტრებთან ბრძოლა და გერმანელ მოსახლეობაზე თვალყურის დევნება.
+* [[ზიპო (სს)|უშიშროების პოლიცია]], შემოკლ.: «ზიპო» ([[გერმ.]]: Sicherheitspolizei - Sipo) - იგი მეთვალყურეობდა კრიმინალურ ([[კრიპო]]) და საიდუმლო ([[გერსატპო]]) პოლიციას.
+* «[[ვაფენ-სს]]» ([[გერმ.]]: Waffen-SS) - ეს ორგანიზაცია შეადგენდა «სს»-ის შეიარაღებულ ძალებს, რომლებიც თავის მხრივ შედგებოდნენ «მკვდარი თავის ქალას შენაერთებისაგან» და «სს-ის სარეზერვო ძალებისაგან».
+* [[ვფჰა|მეურნეობისა და მმართვის მთავარი სამმართველო]], შემოკლ.: «ვფჰა» ([[გერმ.]]: Wirtschafts- und Verwaltungshauptamt - WVHA) - იგი მართავდა «სს»-ის საკუთრებაში მყოფი ინდუსტრიულ, სამომსახურეო და სასოფლო სამეურნეო საწარმოებს, საკონცენტრაციო ბანაკებს და განაგებდა მათ კონსტრუირებას.
+
+
+===გერმანული საწარმოები===
+«სს»-ის მიერ უამრავი ფირმა იქნა დაარსებული. მათ შორის - შპს „[[გერმანული მიწისა და ქვის ქარხანა]]“ ([[1938]]). ეს ფირმები [[1940]] წელს „გერმანულ სამეურნეო საწარმოებში“ გაერთიანდნენ, რომელიც «სს»-ის ელიტისაგან იმართებოდა. [[1942]] წელს ყველა ეკონომიკურ-ფინანსური საქმე  [[ვფჰა|მეურნეობისა და მმართვის მთავარი სამმართველოს]] დაქვემდებარებაში გადავიდა. მას მიეკუთვნებოდნენ აგრეთვე საკონცენტრაციო ბანაკები და აქედან გამომდინარე «სს»-ის ფირმებში ათიათასობით სამხედრო ტყვე და პატიმარი იძულებით მუშაობდა.
+
+[[1943]]-[[1944]] წლებში «სს»-ის ეკონომიკურ იმპერიას 30-მდე მსხვილი და 100-ზე მეტი წვრილი საწარმო მიეკუთვნებოდა, რომლებშიც 40.000 იძულებით მომუშავე პირი იყო დასაქმებული. „გერმანული სამეურნეო საწარმოების“ ცენტრალური ბიურო ბერლინში, [[ორანიენბურგი|ორანიენბურგში]] იყო განთავსებული.
+
+
+
+==დისტანცირება==
+ნაციონალ-კონსერვატიული და მემარჯვენე ექსტრემისტული დაჯგუფეფბები, ისევე როგორც «სს»-ის ყოფილი წევრები უარყოფენ «სს»-ის და «[[ვაფენ-სს]]»-ის ყველა წევრის მონაწილეობას სამხედრო დანაშაულებებში და [[ჰოლოკოსტი|ჰოლოკოსტში]].
+
+
+
+==იხილე აგრეთვე==
+* [[სს-ის ორგანიზაციული სტრუქტურა]]
+* [[ჰიმლერი, ჰაინრიხ|ჰაინრიხ ჰიმლერი]]
+* «[[ვაფენ-სს]]»
+* «[[სა]]»
+
+
+
+==ლიტერატურა==
+* Hans Buchheim, Martin Broszat, Hans-Adolf Jacobsen, Helmut Krausnick: „Anatomie des SS-Staates“, 7. Aufl., München 1999 ISBN 3-506-77502-2
+* Heinz Höhne: „Der Orden unter dem Totenkopf. Die Geschichte der SS“, ISBN 3572013429
+* Eugen Kogon: „Der SS-Staat - Das System der deutschen Konzentrationslager“; Kindler-Verlag, München 1974; Lizenzausgabe Heyne Sachbuch ISBN 3-453-02978-X 
+* Gordon Williamson: “The SS: Hitler's Instrument of Terror”
+* Martin Pollack: „Der Tote im Bunker“, Paul Zsolnay Verlag, 2004, ISBN 3552053182
+* Guido Knopp: „Die SS“, Bertelsmann Verlag, 2002, ISBN 3-570-00621-2
+
+
+
+
 
 
 [[da:SS]]
