--- a/როკოკო.mw
+++ b/როკოკო.mw
@@ -43,3 +43,29 @@
 * [[ვილჰელმსთალის სასახლე]]
 * [[ლეოპოლდსკრონის სასახლე]] ზალცბურგში
 * როკოკოს დარბაზი ბამბერგის [[ძველი რატუშა (ბამბერგი)|ძველ რატუშაში]]
+
+
+[[bg:Рококо]]
+[[da:Rokoko]]
+[[de:Rokoko]]
+[[el:Ροκοκό]]
+[[en:Rococo]]
+[[eo:Rokoko]]
+[[es:Rococó]]
+[[fi:Rokokoo]]
+[[fr:Rococo]]
+[[gl:Rococó]]
+[[he:רוקוקו]]
+[[hu:Rokokó]]
+[[it:Rococò]]
+[[ja:ロココ]]
+[[ko:로코코]]
+[[lb:Rokoko]]
+[[nl:Rococo]]
+[[pl:Rokoko]]
+[[pt:Rococó]]
+[[ru:Рококо]]
+[[sv:Rokoko]]
+[[tr:Rokoko]]
+[[uk:Рококо]]
+[[zh:洛可可]]
