*Empty MediaWiki Message*

--- a/როკოკო.mw
+++ b/როკოკო.mw
@@ -43,8 +43,10 @@
 * [[ვილჰელმსთალის სასახლე]]
 * [[ლეოპოლდსკრონის სასახლე]] ზალცბურგში
 * როკოკოს დარბაზი ბამბერგის [[ძველი რატუშა (ბამბერგი)|ძველ რატუშაში]]
-
-
+{{ხელოვნება}}
+[[კატეგორია:ხელოვნების სტილი]]
+[[კატეგორია:არქიტექტურის სტილი]]
+[[კატეგორია:როკოკო]]
 [[bg:Рококо]]
 [[da:Rokoko]]
 [[de:Rokoko]]
