--- a/როკოკო.mw
+++ b/როკოკო.mw
@@ -14,6 +14,7 @@
 
 
 ==მხატვრები==
+[[სურათი:BoucherRococo.jpg|thumb|200px|ფრანსუა ბუშეს ”სადილი” როკოკოს ელემენტებს მოიცავს. 1739, ლუვრი.]]
 * [[ბუშე, ფრანსუა|ფრანსუა ბუშე]]
 * [[კარერა, როზალბა|როზალბა კარერა]]
 * [[დე შამპენი, ფილიპ|ფილიპ დე შამპენი]]
@@ -34,7 +35,6 @@
 * [[პლაცერი, იოჰან გეორგ|იოჰან გეორგ პლაცერი]]
 * [[რიგო, იასინტ|იასინტ რიგო]]
 * [[ვატო, ანტუან|ანტუან ვატო]]
-
 
 ==შენობები==
 * [[აუგუსტუსბურგის სასახლე]]
